[package]
name = "sn-trie"
version = "0.1.0"
description = "Minimal starknet merkle patricia trie implementation"
edition = "2021"
license-file = "LICENSE"
keywords = ["mpt", "trie", "starknet", "merkle-patricia-trie"]
categories = ["cryptography", "data-structures", "blockchain"]

[dependencies]
starknet-types-core = { version = "0.1.0", default-features = false, features = [
    "serde",
    "hash",
] }
bitvec = "1.0.1"
anyhow = "1.0.75"
